src/styles.css
body {
  background-color: darkgrey;
  color: black;
  height: 1vh;
  width: 100%;
  background-color: #FFE3D6;
  margin: 0px;
  font-family: 'Montserrat', sans-serif;
  overflow: scroll;
  transition-duration: .5s;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 35%;
  padding-right: 35%;
  padding-bottom: .3rem;
  padding-top: 1rem;
}

nav > button {
  background-color: #0B3954;
  color: white;
}

nav > button:hover {
  background-color: #0668a0;
}

nav > button:active {
  background-color: #c8553d;
}

.search-field{

}

button {
  height: 2.5rem;
  width: auto;
  padding: 0rem 1rem 0rem 1rem;
  border: 0px;
  border-radius: .5rem;
  cursor: pointer;
}

h1, h3 {
  margin-bottom: 0px;
  padding: 0px;
  border: 0px;
  font-family: 'STIX Two Math', serif;
}

h4 {
  margin: 0px;
}

header,
footer {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  justify-content: center;
  background-color: #c8553d;
  width: 100%;
}

footer {
  height: 2rem;
  background-color: #c8553d;
  position: absolute;
  bottom: 0;
}

.title-container {
  text-align: center;
  color: white;
  background-color: #c8553d;
  margin: 0rem;
  padding: .1rem 0rem 1rem 0rem;
  border: 0px;
}

.filter-select {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
  /* width: 50rem; */
  background-color: #13577f;
  color: white;
}

.filter-select > label {
  padding: 0rem .5rem 0rem .5rem;
}

.meals {
  padding-right: 1rem;
  font-weight: bold;
}

.sidebars {
  display: inline-flex;
  /* position: relative; */
  background-color: #8FB7B7;
  margin: 0px;
  border: 0px;
}

aside > button {
  margin-top: 2rem;
  padding: 0px;
  border: 0px;
  width: 3rem;
  height: 3rem;
}

.left-sidebar {
  display: inline-block;
  position: absolute;
  left: 2rem;
  width: 14%;
  height: 100%;
  padding-top: 2rem;
  z-index: 2;
}

.left-sidebar > button {
  height: 3rem;
  flex-direction: column;
}

.left-sidebar > button:hover {
  color: white;
  background-color: #5F9595;
}

.left-sidebar > button:active {
  color: white;
  background-color: #EFB87E;
}

.right-sidebar {
  display: inline-block;
  flex-direction: column;
  position: absolute;
  align-items: center;
  justify-content: center;
  right: 1rem;
  width: 10%;
  height: 100%;
  /* top: 40%; */
  z-index: 2;
}

.login-button {
  position: absolute;
  right: 5%;
  color: black;
  background-color: #FFF8F3;
  height: auto;
  width: 5rem;
  padding: .5rem 0rem .5rem 0rem;
}

.scroll-arrow {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  height: 5rem;
  width: 5rem;
  cursor: pointer;
  z-index: 3;
}

.right-arrow {
  position: absolute;
  top: 225%;
}

.content-container {
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  position: relative;
  background-color: #8FB7B7;
  padding-top: 3rem;
  padding-bottom: 3rem;
  height: 25rem;
  z-index: 0;
}

.main-content {
  /* background-color: #588b8b; */
  /* height: 40rem;
  width: 40rem; */

  z-index: 0;
}

.recipe-grid {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.push-to-back {
  z-index: -1;
}

.bring-forward {
  z-index: 0;
}

.recipe {
  display: flex;
  flex-direction: column;
  /* align-items: flex-start; */
  justify-content: center;
  text-align: center;
  position: relative;
  height: 22rem;
  width: 15rem;
  background-color: #ffffff;
  padding: .8rem;
  border-radius: 1rem;
  margin: 0rem .4rem 0rem .4rem;
  overflow: scroll;
}

.recipe-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.recipe-info {
  margin: 0rem .4rem 0rem .4rem;
}

.login-popup {

}

.login-form {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: 12rem;
  line-height: 2rem;
  padding: 1rem 1.5rem 1rem 1.5rem;
  border: 1px solid black;
  background-color: #fff8f4;
  top: 8%;
  right: 9.5%;
  z-index: 2;
}

.login-form > button {
  margin-top: 1rem;
  height: 2rem;
  width: auto;
  background-color: #1e9692;
  color: white;
}

.login-form > .sign-up-button {
  background-color: #C8553D;
}

.login-form > .cancel-login {
  border: 0px;
  background-color: none;
}

.confirm-password {
  display: flex;
  flex-direction: column;
}

.meal-image {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: baseline;
  margin-top: -25%;
}

.meal-image > img {
  height: 9rem;
  width: 9rem;
  padding: 0px;
  margin: 0px;
  /* border: 1px transparent black; */
}

.star {
  height: 3rem;
  width: 3rem;
  position: absolute;
  top: 4%;
  right: 4%;
  z-index: 1;
  cursor: pointer;
}

.all-recipe-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 22rem;
  width: 60%;
  overflow-x: hidden;
  overflow-y: scroll;
  border: 0px;
  border-radius: 1rem;
  top: 0%;
  left: 20%;
  background-color: #f9f1ef;
  padding: 1rem;
}

.all-recipe-grid {
  justify-content: center;
  align-items: center;
  margin: auto;
}

.mini-recipe {
  /* flex-direction: row; */
  display: inline-table;
  height: 15rem;
  width: 10rem;
  padding: .5rem;
  margin: .3rem;
  background-color: white;
  border: 1px solid grey;
  border-radius: 1rem;
  break-after: auto;
}

.mini-recipe > img {
  height: 8rem;
  width: 10rem;
  flex-flow: row wrap;
}

.filtered-recipe-grid {
  flex-direction: row;
  /* display: grid; */
  display: block;
  align-items: center;
  width: 70%;
}

.filtered-recipe-grid > img {
  /* display: grid; */
  height: 20%;
  width: 20%;
  padding: .5rem;
  margin: .3rem;
  background-color: white;
  border: 1px solid grey;
  border-radius: 1rem;
}

.full-recipe-container {
  justify-content: center;
  height: auto;
  width: 70%;
  padding: 1rem;
  overflow: scroll;
  border-radius: 1rem;
  background-color: #fff8f4;
}

.full-recipe > img {

}

.add-recipe {
  height: 80%;
  width: 100%;
  padding: 2rem;
  background-color: #FFF8F3;
  border: 1px solid black;
  bottom: 10%;
}

.add-recipe > h3 {
  /* margin-top: .2rem; */
}

.add-recipe > .plus-button {
  height: 2rem;
  width: 2rem;
}

.add-recipe > .submit-recipe {
  background-color: #8FB7B7;
  color: white;
  margin-top: .2rem;
}

.popup-container {
  display: block;
}

#popup {
  position: fixed;
  height: 10%;
  width: 40%;
  border-radius: 30px;
  text-align: center;
  font-size: 2.2vh;
  top: 10%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 3;
}

#popup p{
  position: relative;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

.gold-popup {
  background-color: rgba(218, 158, 29, 0.726);
}

.red-popup {
  background-color: rgba(218, 73, 29, 0.726);
}

.green-popup {
  background-color: rgba(20, 135, 43, 0.726);
}

.blue-popup {
  background-color: rgba(29, 98, 218, 0.726);
}

.hidden {
  display: none;
}



.favorite-star{
  background-color: #eeeeee;
  color : rgb(247, 115, 115);
}
.is-favorite{
  background-color:rgb(255, 111, 111);
  color : #acacac;
}


.home-title{
  font-size: 40px;
}

